# miscellany

./: .gitignore
css3-transition-test/: index.html
robotics/c++-dicerolls-exercise/: CMakeLists.txt
robotics/c++-ncurses-example/: CMakeLists.txt  main.cpp
robotics/c++-rock-paper-scissors-exercise/: CMakeLists.txt  README.md
robotics/c++-rock-paper-scissors-exercise/include/: ComputerPlayer.h  HumanPlayer.h  PlayerBase.h
robotics/c++-rock-paper-scissors-exercise/src/: ComputerPlayer.cpp  Humanplayer.cpp  PlayerBase.cpp  main.cpp
robotics/chaos-game-java/: Application.java
robotics/dicerolls-exercise/: .gitignore  diceroll.cpp
robotics/go-simple-maze/: maze.go
robotics/java-chaos-game/: Application.java
robotics/lanterna-test/: .project  pom.xml
robotics/lanterna-test/src/main/: my.java
robotics/pros-hello-world/: README.md  project.pros
robotics/pros-hello-world/include/: main.h
robotics/pros-hello-world/src/: opcontrol.cpp
robotics/rock-paper-scissors-exercise/: README.md
robotics/rock-paper-scissors-exercise/include/: ComputerPlayer.h
robotics/rock-paper-scissors-exercise/src/: PlayerBase.cpp  main.cpp
robotics/sandbox/: README.md
