PROJECT(curses-example CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-Wall -Wextra")

SET(CURSES_NEED_NCURSES TRUE)
FIND_PACKAGE(Curses REQUIRED)
INCLUDE_DIRECTORIES(${CURSES_INCLUDE_DIRS})

ADD_EXECUTABLE(ce main.cpp)
TARGET_LINK_LIBRARIES(ce ${CURSES_LIBRARIES})
