PROJECT(curses-example CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-Wall -Wextra")

# Link to the ncurses dependency for the "ce" target.
SET(CURSES_NEED_NCURSES TRUE)
FIND_PACKAGE(Curses REQUIRED)
INCLUDE_DIRECTORIES(${CURSES_INCLUDE_DIRS})

# ADD_EXECUTABLE(ce main.cpp)
# TARGET_LINK_LIBRARIES(ce PRIVATE ${CURSES_LIBRARIES})

# Link to the SDL dependency for the "se" target.
FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
ADD_EXECUTABLE(se main.cpp)
TARGET_LINK_LIBRARIES(se PRIVATE ${SDL2_LIBRARIES})
